# Aobus

./: .asan_suppressions  .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PLAN-hot-cold-customkv.md  PLAYBACK_IMPLEMENTATION_PLAN.md  README.md  SMART_LIST_ENGINE_PLAN.md  SMART_LIST_HIERARCHY_UI_PLAN.md  Soul.md  TAG_TRACKBUILDER_MIGRATION_PLAN.md  TODO.md  analyze_classes.py  analyze_structs.py  ao  ao.bat  build.sh  clang-tidy-suppression-remediation-plan.md  data.mdb  dependency-contract.json  dossier.md  files_with_testcase.txt  filter_msg.py  format.sh  format_modified.sh  nixpkgs.json  plan.md  pyproject.toml  report  report.txt  shell.nix  start-msbuild-env.bat  test_grammar  (+3 more)
app/: AddTrackDialog.cpp  AddTrackDialog.h  AppConfig.cpp  AppConfig.h  CMakeLists.txt  Common.h  CoverArtLabel.cpp  CoverArtLabel.h  CoverArtWidget.h  ImportProgressDialog.cpp  ImportProgressDialog.h  ImportProgressDialog.ui  ImportWorker.cpp  ImportWorker.h  ListRow.cpp  ListRow.h  ListTreeNode.cpp  ListTreeNode.h  ListView.cpp  ListView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewListDialog.cpp  NewListDialog.h  PlaybackBar.cpp  PlaybackBar.h  PlaylistExporter.cpp  PlaylistExporter.h  QueryExpressionBox.cpp  QueryExpressionBox.h  SmartListDialog.cpp  SmartListDialog.h  StatusBar.cpp  StatusBar.h  TableModel.cpp  TableModel.h  TagPopover.cpp  TagPopover.h  TagPromptDialog.cpp  (+16 more)
app/cli/: CMakeLists.txt  CliContext.cpp  CliContext.h  CliRuntime.cpp  CliRuntime.h  CommandError.h  DryRunFlag.h  DumpOutput.h  DumpUtils.h  InitCommand.cpp  InitCommand.h  LibCommand.cpp  LibCommand.h  ListCommand.cpp  ListCommand.h  Output.cpp  Output.h  QueryHelp.cpp  QueryHelp.h  Run.cpp  Run.h  ScanCommand.cpp  ScanCommand.h  ScanOutput.cpp  ScanOutput.h  TagCommand.cpp  TagCommand.h  TrackCommand.cpp  TrackCommand.h  TrackSelection.cpp  TrackSelection.h  generate_test_library.py  generate_test_library.sh  main.cpp
app/common/: AppConfig.cpp  AppConfig.h
app/core/: AppConfig.cpp  AppConfig.h  AudioFormat.h  IMainThreadDispatcher.h  ImportWorker.cpp  ImportWorker.h  Log.cpp  Log.h
app/gtkmm4/: CoverArtWidget.h  ImportProgressDialog.cpp  ImportProgressDialog.h  ImportWorker.cpp  ImportWorker.h  ListRow.cpp  ListRow.h  MainWindow.cpp  MainWindow.h  NewListDialog.cpp  NewListDialog.h  PlaylistExporter.cpp  PlaylistExporter.h  TagPromptDialog.cpp  TagPromptDialog.h  TrackListAdapter.cpp  TrackListAdapter.h  TrackRow.cpp  TrackRow.h  TrackViewPage.cpp  TrackViewPage.h  main.cpp
app/linux-gtk/: CMakeLists.txt  aobus.gresource.xml  app.css  main.cpp
app/model/: AllTrackIdsList.cpp  AllTrackIdsList.h  FilteredTrackIdList.cpp  FilteredTrackIdList.h  ListDraft.h  ManualTrackIdList.cpp  ManualTrackIdList.h  SmartListEngine.cpp  SmartListEngine.h  TrackIdList.cpp  TrackIdList.h  TrackRowDataProvider.cpp  TrackRowDataProvider.h
app/playback/: AlsaExclusiveBackend.cpp  AlsaExclusiveBackend.h  FfmpegDecoderSession.cpp  FfmpegDecoderSession.h  FormatNegotiator.cpp  FormatNegotiator.h  IAudioBackend.h  IPcmSource.h  MemoryPcmSource.cpp  MemoryPcmSource.h  NullBackend.h  PcmRingBuffer.cpp  PcmRingBuffer.h  PipeWireBackend.cpp  PipeWireBackend.h  PlaybackController.cpp  PlaybackController.h  PlaybackEngine.cpp  PlaybackEngine.h  PlaybackTypes.h  StreamingPcmSource.cpp  StreamingPcmSource.h
app/rt/: AllTracksSource.cpp  AppRuntime.cpp  ConfigStore.cpp  CoreRuntime.cpp  LibraryMutationService.cpp  LibraryYamlExporter.cpp  LibraryYamlImporter.cpp  ListSourceStore.cpp  ManualListSource.cpp  NotificationService.cpp  PlaybackService.cpp  README.md  SmartListEvaluator.cpp  SmartListSource.cpp  TrackCommandService.cpp  TrackDetailProjection.cpp  TrackField.cpp  TrackListProjection.cpp  TrackPresentation.cpp  TrackSource.cpp  ViewService.cpp  WorkspaceService.cpp
app/runtime/: AllTracksSource.cpp  AllTracksSource.h  AppRuntime.cpp  AppRuntime.h  AppSession.cpp  AppSession.h  AtomicFile.cpp  BusLog.h  CommandBus.h  CommandTypes.h  CompletionService.cpp  ConfigStore.cpp  ConfigStore.h  ConfigYamlTraits.h  CorePrimitives.h  CoreRuntime.cpp  CoreRuntime.h  EventBus.h  EventTypes.h  ISessionPersistence.h  ImmediateControlExecutor.h  LibraryExporter.cpp  LibraryExporter.h  LibraryImporter.cpp  LibraryImporter.h  LibraryMutationService.cpp  LibraryMutationService.h  LibraryYamlExporter.cpp  LibraryYamlExporter.h  LibraryYamlImporter.cpp  ListSourceStore.cpp  ListSourceStore.h  Log.cpp  ManualListSource.cpp  ManualListSource.h  MetadataValueCompleter.cpp  NavigationHistory.cpp  NotificationService.cpp  NotificationService.h  ObservableStore.h  (+51 more)
app/tui/: AnchoredOverlay.cpp  AnchoredOverlay.h  App.cpp  App.h  AudioBackendBootstrap.cpp  AudioBackendBootstrap.h  CMakeLists.txt  CommandCompletion.cpp  CommandCompletion.h  CommandCompletionProvider.cpp  CommandCompletionProvider.h  CommandCompletionState.cpp  CommandCompletionState.h  CommandPalettePanel.cpp  CommandPalettePanel.h  CoverArt.cpp  CoverArt.h  CoverArtLoader.cpp  CoverArtLoader.h  EventController.cpp  EventController.h  Executor.cpp  Executor.h  FrameTimer.cpp  FrameTimer.h  LibraryController.cpp  LibraryController.h  LibraryNavigation.cpp  LibraryNavigation.h  ListNavigation.cpp  ListNavigation.h  Main.cpp  Model.cpp  Model.h  NotificationCenterPanel.cpp  NotificationCenterPanel.h  OutputDeviceController.cpp  OutputDeviceController.h  OutputDevicePanel.cpp  OutputDevicePanel.h  (+45 more)
lib/: CMakeLists.txt
lint/: AobusLintModule.cpp  CMakeLists.txt  ControlBlockSpacingCheck.cpp  ControlBlockSpacingCheck.h
script/: CMakeLists.txt  CMakePresets.json  run-clang-analyzer.sh  run-clang-tidy.sh  run-coverage.sh  run-tests.sh  vcpkg.json
test/: CMakeLists.txt  main.cpp
tool/: BasicCommand.h  CMakeLists.txt  ComboCommand.h  Command.h  InitCommand.cpp  InitCommand.h  LibCommand.cpp  LibCommand.h  ListCommand.cpp  ListCommand.h  TagCommand.cpp  TagCommand.h  TrackCommand.cpp  TrackCommand.h  TrackUtils.cpp  TrackUtils.h  generate_test_library.py  generate_test_library.sh  main.cpp  test_rsc.sh
(+2983 files in other folders)
